<resources>
    <string name="app_name">JobFinder</string>
    <string name="home_title">Home</string>
    <string name="job_applications_title">Job Applications</string>
    <string name="notifications_title">Notifications</string>
    <string name="profile_title">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="level_text">Level %1$d</string>
        <string name="select_education_level">Select Education Level</string>
        <string name="select_industry">Select Industry</string>
    <string name="company_logo_description">Company Logo</string>
    <string name="company_description_title">Company Description</string>
    <string name="location_title">Location</string>
    <string name="salary_title">Salary</string>
    <string name="job_description_title">Job Description</string>
    <string name="contact_info_title">Contact Information</string>
    <string name="posted_at_title">Posted At</string>
    <string name="apply_now">Apply Now</string>
    <string name="interstitial_ad_unit_id">YOUR_INTERSTITIAL_AD_UNIT_ID</string>
    <string name="chat_head_description">Chat Head</string>
    <!-- Chuỗi cho activity_chat.xml -->
    <string name="back_button_description">Back</string>
    <string name="chat_title">Chat Support</string>
    <string name="more_options_description">More Options</string>
    <string name="attach_file_description">Attach File</string>
    <string name="message_hint">Type a message...</string>
    <string name="send_message_description">Send Message</string>
        <string name="email_hint">Email</string>
        <string name="username_hint">Username</string>
        <string name="password_hint">Password</string>
        <string name="confirm_password_hint">Confirm Password</string>
        <string name="register_button">Register</string>
        <string name="registering">Registering…</string>
        <string name="register_button_description">Register Button</string>
        <string name="back_to_login">Already have an account? Login</string>
        <string name="back_to_login_description">Back to Login Link</string>
        <string name="error_invalid_email">Please enter a valid email address</string>
        <string name="error_empty_username">Please enter a username</string>
        <string name="error_empty_password">Please enter a password</string>
        <string name="error_short_password">Password must be at least %d characters</string>
        <string name="error_password_mismatch">Passwords do not match</string>
        <string name="error_registration_failed">Registration failed</string>
        <string name="error_network">Network error: %s</string>
</resources>